# omm-sbt-causal-kinetic-framework

./: CITATION.cff  LICENSE  README.md  pyproject.toml  requirements.txt
configs/: default.yaml
docs/: REPRODUCIBILITY.md
docs/manuscript/: README.md  main.tex
experiments/: run_simulation.py
results/sample_outputs/: continuity_analysis.csv  independent_reproduction.csv  independent_reproduction_summary.csv  invariance_scan.csv  invariance_scan_summary.csv  simulation.csv
scripts/: run_all.sh
src/core/: evolution.py  fields.py  operators.py
src/omm_sbt.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/omm_sbt/analysis/: invariance.py  metrics.py
src/omm_sbt/core/: evolution.py  fields.py  operators.py
src/omm_sbt/models/: parameters.py
tests/: test_smoke.py
validation/: continuity_analysis.py  independent_reproduction.py  invariance_scan.py  run_validation_suite.py
