[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "omm-sbt"
version = "0.1.0"
description = "Reference implementation of the OMM-SBT causal-kinetic framework"
authors = [{name = "Nicolas Gilbert Albert Roux"}]
requires-python = ">=3.9"
dependencies = ["numpy>=1.23", "pandas>=1.5", "matplotlib>=3.7", "pyyaml>=6.0"]

[tool.setuptools.packages.find]
where = ["src"]
